--- a/Wiki_Movie_Python3.ipynb
+++ b/Wiki_Movie_Python3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1ae3152f",
+   "id": "4f37398c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b232c912",
+   "id": "b09f235d",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a163733e",
+   "id": "005904c8",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4aeabad3",
+   "id": "5fecbfb0",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8cbebd1e",
+   "id": "9d013f93",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "eb1b4cba",
+   "id": "2e702a0c",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34d6310e",
+   "id": "49208d0f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13297bdf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -550,9 +558,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
