--- a/ETL_function_test.ipynb
+++ b/ETL_function_test.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'psycopg2'",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-4f63f7318245>, line 24)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-77708fa57f2b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msqlalchemy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcreate_engine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpsycopg2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# from config import db_password\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'psycopg2'"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-4f63f7318245>\"\u001b[0;36m, line \u001b[0;32m24\u001b[0m\n\u001b[0;31m    with open(os.path.join('/Users/gobinaththangaiya/Documents/Class Work/wikipedia-movies.json'), mode='r') as file:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -28,6 +25,7 @@
     "import psycopg2\n",
     "\n",
     "# from config import db_password\n",
+    "from config import db_password\n",
     "\n",
     "import time\n",
     "\n",
@@ -36,16 +34,16 @@
     "\n",
     "def function_name():\n",
     "    # 2. Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
-    "    kaggle_metadata = pd.read_csv(f'{file_dir}movies_metadata.csv', low_memory=False)\n",
-    "    ratings = pd.read_csv(f'{file_dir}ratings.csv')\n",
+    "    kaggle_metadata = pd.read_csv(os.path.join('/Users/gobinaththangaiya/Documents/Class Work/movies_metadata.csv'), low_memory=False)\n",
+    "    ratings = pd.read_csv(os.path.join('/Users/gobinaththangaiya/Documents/Class Work/ratings.csv')\n",
     "\n",
     "    # 3. Open the read the Wikipedia data JSON file.\n",
-    "    file_dir = '/Users/gobinaththangaiya/Documents/Class Work/'\n",
-    "    f'{file_dir}filename'\n",
-    "    with open(f'{file_dir}/wikipedia-movies.json', mode='r') as file:\n",
+    "    with open(os.path.join('/Users/gobinaththangaiya/Documents/Class Work/wikipedia-movies.json'), mode='r') as file:\n",
     "        wiki_movies_raw = json.load(file)\n",
+    "                          \n",
     "    # 4. Read in the raw wiki movie data as a Pandas DataFrame.\n",
     "    wiki_movies_df = pd.DataFrame(wiki_movies_raw)\n",
+    "                          \n",
     "    # 5. Return the three DataFrames\n",
     "    return wiki_movies_df, kaggle_metadata, ratings\n",
     "\n",
@@ -59,7 +57,7 @@
     "ratings_file = f'{file_dir}/ratings.csv'\n",
     "\n",
     "# 7. Set the three variables in Step 6 equal to the function created in Step 1.\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load()"
+    "wiki_file, kaggle_file, ratings_file = function_name()"
    ]
   },
   {
