Movies_ETL_Completed

--- a/ETL_function_test.ipynb
+++ b/ETL_function_test.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-4f63f7318245>, line 24)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-4f63f7318245>\"\u001b[0;36m, line \u001b[0;32m24\u001b[0m\n\u001b[0;31m    with open(os.path.join('/Users/gobinaththangaiya/Documents/Class Work/wikipedia-movies.json'), mode='r') as file:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
+    "import os\n",
     "import re\n",
     "\n",
     "from sqlalchemy import create_engine\n",
@@ -34,11 +25,13 @@
     "\n",
     "def function_name():\n",
     "    # 2. Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
-    "    kaggle_metadata = pd.read_csv(os.path.join('/Users/gobinaththangaiya/Documents/Class Work/movies_metadata.csv'), low_memory=False)\n",
-    "    ratings = pd.read_csv(os.path.join('/Users/gobinaththangaiya/Documents/Class Work/ratings.csv')\n",
+    "    file_dir = '/Users/gobinaththangaiya/Documents/Class Work/'\n",
+    "    \n",
+    "    kaggle_metadata = pd.read_csv(os.path.join(file_dir, \"movies_metadata.csv\"), low_memory=False)\n",
+    "    ratings = pd.read_csv(os.path.join(file_dir, \"ratings.csv\"))\n",
     "\n",
     "    # 3. Open the read the Wikipedia data JSON file.\n",
-    "    with open(os.path.join('/Users/gobinaththangaiya/Documents/Class Work/wikipedia-movies.json'), mode='r') as file:\n",
+    "    with open(f'{file_dir}/wikipedia-movies.json', mode='r') as file:\n",
     "        wiki_movies_raw = json.load(file)\n",
     "                          \n",
     "    # 4. Read in the raw wiki movie data as a Pandas DataFrame.\n",
